
2013-01-30 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: ymonvar1    - Multi-year monthly variance [Divisor is (n-1)]
	* New operator: ymonstd1    - Multi-year monthly standard deviation [Divisor is(n-1)]
	* New operator: ydayvar1   - Multi-year daily variance [Divisor is (n-1)]
	* New operator: ydaystd1   - Multi-year daily standard deviation [Divisor is (n-1)]


2013-01-25 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * New operator: timvar1    - Time variance [Divisor is (n-1)]
	* New operator: timstd1    - Time standard deviation [Divisor is (n-1)]
        * New operator: hourvar1   - Hourly variance [Divisor is (n-1)]
	* New operator: hourstd1   - Hourly standard deviation [Divisor is (n-1)]
	* New operator: dayvar1    - Daily variance [Divisor is (n-1)]
	* New operator: daystd1    - Daily standard deviation [Divisor is (n-1)]
	* New operator: monvar1    - Monthly variance [Divisor is (n-1)]
	* New operator: monstd1    - Monthly standard deviation [Divisor is (n-1)]
	* New operator: yearvar1   - Yearly variance [Divisor is (n-1)]
	* New operator: yearstd1   - Yearly standard deviation [Divisor is (n-1)]

2013-01-23 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: ensstd1 - Ensemble standard deviation [Divisor is (n-1)]
	* New operator: ensvar1 - Ensemble variance [Divisor is (n-1)]
	* New operator: fldstd1 - Field standard deviation [Divisor is (n-1)]
	* New operator: fldvar1 - Field variance [Divisor is (n-1)]

2013-01-22 Helmut Haak <Helmut.Haak@zmaw.de>

	* New operator: adisit - Potential temperature to in-situ temperature

2013-01-21 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: rhopot - Calculates potential density
	* New operator: select - select fields from an unlimited number of input files

2013-01-17 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* diff: print only records that differ
	* setpartab: added namelist entry 'delete'

2013-01-11 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
